Replace heart favicon with shield icon for better branding

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="TruthGuard - AI Powered Fake News Detection" />
     <meta property="og:description" content="Empowering users to identify misinformation with advanced AI technology" />
     <meta property="og:image" content="/og-image.png" />
+    <link rel="icon" type="image/svg+xml" href="/shield-favicon.svg" />
   </head>
 
   <body>
